added remaining aria-label values

--- a/_data/content/config.yml
+++ b/_data/content/config.yml
@@ -1,7 +1,7 @@
 # Example thumbnail URL: https://i3.ytimg.com/vi/RjTpi7djKsI/maxresdefault.jpg or http://i3.ytimg.com/vi/RjTpi7djKsI/hqdefault.jpg
 # Note: When loading videos, we can leave the video URLs as they are and just split on '/' with "{{ url | split:'/' | first }}" or {{ url | split:'/' | last }}?
 name: AxOps
-description: This will be the og:description text in PROD.
+description: AxOps specializes in Data Intelligence, Enterprise AI, Hybrid Cloud Computing, and FinTech Solutions. We expedite your journey from idea to execution.
 profile_image: /assets/img/axops-600x600.png
 item_types:
   image:
