--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -4,8 +4,9 @@ tagline_main: Expedite your journey from <i>idea</i> to <b>execution</b><br />
 
 #tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
 #tagline_dynamic: at low cost, and infinite scale, on your terms 🎯
-tagline_dynamic: at optimal cost ⚖️, and unlimited scale ♾️, on your terms 🎯
-tagline_dynamic_delay: 85
+# tagline_dynamic: at optimal cost ⚖️, and unlimited scale ♾️, on your terms 🎯
+tagline_dynamic: on your terms 🎯
+tagline_dynamic_delay: 0
 #tagline_dynamic_delay: 100
 #tagline_dynamic_delay: 75
 #tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligence solutions.
